Compleate the home section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Portfolio</title>
 </head>
@@ -33,11 +33,22 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Gananath Athukorala</div>
                 <div class="text-3">And I'm a <span>Web-developer</span></div>
+                <a href="#">Hire me</a>
             </div>
         </div>
     </section>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe quibusdam quae debitis, dolor laudantium expedita corrupti repudiandae, eligendi alias voluptatum molestiae esse sunt! Animi dicta amet velit quis eum. Cumque id tenetur natus ab? Velit, debitis quibusdam, excepturi reiciendis eligendi iste explicabo incidunt sed accusamus, dolorum autem quod quo quae consectetur! Corrupti aperiam doloribus ab quo! Provident repellat nisi cum blanditiis mollitia neque, nihil doloremque itaque illo, vel possimus officia quibusdam voluptatum explicabo nesciunt beatae? Natus dolores dolorem quod molestias necessitatibus ducimus at est assumenda, adipisci harum vel reiciendis laudantium, beatae molestiae aspernatur maxime autem ex tenetur quisquam sapiente error quis culpa. Maiores ab quibusdam, repudiandae, aliquid facilis eius debitis cum officiis consequuntur quia necessitatibus doloremque enim voluptatem, autem temporibus. Itaque officia fugit repellendus natus. Beatae reiciendis fugiat nemo soluta! Facilis laboriosam animi temporibus saepe veritatis tempora? Laudantium, natus adipisci. Sit, repellendus consequatur maxime, nulla provident quo facilis fugiat laudantium, illum incidunt perferendis nisi obcaecati dolorum ut iste velit minus magnam amet possimus veritatis aliquam cum. Officia officiis nam excepturi incidunt. Accusantium asperiores, fuga amet optio eius sunt ad temporibus corporis, perferendis magnam est cum neque necessitatibus consequuntur atque sapiente sequi esse at minus doloribus nemo provident expedita totam suscipit.</p>
 
+    <!-- About sect start -->
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">About me</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="img/01.jpeg" alt=" ">
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
