--- a/index.html
+++ b/index.html
@@ -46,9 +46,45 @@
                 <div class="column left">
                     <img src="img/01.jpeg" alt=" ">
                 </div>
+                <div class="column right">
+                    <div class="text">I'm Gananath nd I'm a <span>Web-developer</span></div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat dicta possimus ipsa quia voluptate eius quasi similique autem, sint quis optio quae ratione accusamus veritatis esse, pariatur, nulla quisquam totam atque. Repellat adipisci itaque praesentium, eveniet similique quae perferendis voluptatum molestias iste fugit molestiae ullam? Dicta velit quis aspernatur magni voluptatum saepe in quod natus perferendis ab, voluptate sed sequi?</p>
+                    <a href="#">Download CV</a>
+                </div>
             </div>
         </div>
     </section>
+
+    <!-- Services sect start -->
+    <section class="services" id="services">
+        <div class="max-width">
+            <h2 class="title">My services</h2>
+            <div class="services-content">
+                <div class="cards">
+                    <div class="box">
+                        <i class="fas fa-paint-brush"></i>
+                        <div class="text">Web Design</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore corrupti facere asperiores aut accusamus! Voluptates.</p>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="box">
+                        <i class="fas fa-chart-line"></i>
+                        <div class="text">Advertising</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore corrupti facere asperiores aut accusamus! Voluptates.</p>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">Apps Design</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore corrupti facere asperiores aut accusamus! Voluptates.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
