--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </div>
         </div>
     </nav>
+
     <!-- Home sect start -->
     <section class="home" id="home">
         <div class="max-width">
@@ -85,6 +86,56 @@
         </div>
     </section>
 
+    <!-- Skills section start -->
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">My Skills</h2>
+            <div class="skills-content">
+                <div class="column left">
+                    <div class="text">My creative skills & expireanes.</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt adipisci dolorum cupiditate nobis eaque. Quos enim explicabo reiciendis fugit asperiores! Molestiae aperiam laboriosam quisquam eius sapiente veniam quasi labore dignissimos dolorum eaque ullam eos pariatur repellat ex reiciendis eveniet, hic provident amet quae cum praesentium reprehenderit iusto? Veritatis illo, exercitationem cumque reiciendis fugiat repellendus eius nisi magnam molestiae non vel.</p>
+                    <a href="#">Read more</a>
+                </div>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML</span>
+                            <span>90%</span>
+                        </div>
+                    <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>CSS</span>
+                            <span>80%</span>
+                        </div>
+                    <div class="line css"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>JavaSript</span>
+                            <span>50%</span>
+                        </div>
+                    <div class="line js"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>PHP</span>
+                            <span>60%</span>
+                        </div>
+                    <div class="line php"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>MySQL</span>
+                            <span>70%</span>
+                        </div>
+                    <div class="line mysql"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
