Create footer section & Comlpleate the front-end

--- a/index.html
+++ b/index.html
@@ -7,22 +7,26 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
     <title>Portfolio</title>
 </head>
 <body>
+    <dic class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
+    </dic>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Protfor<span>lio.</span></a></div>
+            <div class="logo"><a href="#">Protfo<span>lio.</span></a></div>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Teams</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="#home" lass="menu-btn">Home</a></li>
+                <li><a href="#about" lass="menu-btn">About</a></li>
+                <li><a href="#services" lass="menu-btn">Services</a></li>
+                <li><a href="#skills" lass="menu-btn">Skills</a></li>
+                <li><a href="#teams" lass="menu-btn">Teams</a></li>
+                <li><a href="#contact" lass="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -36,7 +40,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Gananath Athukorala</div>
-                <div class="text-3">And I'm a <span>Web-developer</span></div>
+                <div class="text-3">And I'm a <span class="typing-1"></span></div>
                 <a href="#">Hire me</a>
             </div>
         </div>
@@ -51,7 +55,7 @@
                     <img src="img/01.jpeg" alt=" ">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Gananath nd I'm a <span>Web-developer</span></div>
+                    <div class="text">I'm Gananath nd I'm a <span class="typing-2"></span></div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat dicta possimus ipsa quia voluptate eius quasi similique autem, sint quis optio quae ratione accusamus veritatis esse, pariatur, nulla quisquam totam atque. Repellat adipisci itaque praesentium, eveniet similique quae perferendis voluptatum molestias iste fugit molestiae ullam? Dicta velit quis aspernatur magni voluptatum saepe in quod natus perferendis ab, voluptate sed sequi?</p>
                     <a href="#">Download CV</a>
                 </div>
@@ -241,6 +245,11 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer section start -->
+    <footer>
+        <span>Created by <a href="#">CodShane</a> | <span class="fas fa-copyright"></span> 2021 All rigth reserved.</span>
+    </footer>
 
     <script src="script.js"></script>
 </body>
